--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.3.2
 contourpy==1.2.1
 cycler==0.12.1
 Django==5.1
+django-simple-history==3.7.0
 fonttools==4.53.1
 idna==3.7
 kiwisolver==1.4.5
@@ -17,4 +18,3 @@ requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
 urllib3==2.2.2
-gunicorn
